--- a/styles/Style.css
+++ b/styles/Style.css
@@ -165,4 +165,7 @@ body {
     .apresentacao__conteudo {
         width: auto;
     }
+    .apresentacao__about__texto {
+        width: auto;
+    }
 }
