--- a/styles/Style.css
+++ b/styles/Style.css
@@ -117,6 +117,10 @@ body {
     font-weight: 575;
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .apresentacao__curriculo__titulo {
